test/black-box/v4/3.exp
[Line 5] Semantic error: Variable abacaxi used but not initialized.
