test/black-box/v4/3.toc
# Funcao principal do programa
void toc()
  int abacaxi
  int hortela = 3
  int abacaxiComHortela = abacaxi + hortela